fix: improve content alignment

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles.scss';
+@import '../../shared/styles/variables.scss';
 .footer {
   background-color: $dark-green;
   color: #ffff;
@@ -12,5 +12,5 @@
     bottom: 0;
   }
   font-size: 22px;
-  height: 40px;
+  height: 20px;
 }
