--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,30 +1,29 @@
-@import '../../../styles.scss';
+@import '../../shared/styles/variables.scss';
 .header {
   background-color: $dark-green;
   color: #ffff;
   position: fixed;
   top: 0;
   font-size: 18px;
-  height: 80px;
+  height: 60px;
   width: 100%;
   display: flex;
   align-items: stretch;
-  padding: 0 90px;
-  @media (max-width: 720px) {
-    padding: 0 55px;
-  }
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .header-content {
   display: flex;
   justify-content: space-between;
-  width: 1734px;
+  max-width: 1240px;
+  width: 100%;
+  padding: 0 20px;
 }
 
 .navigation,
 .user-actions {
   display: flex;
-  align-items: center;
   flex-direction: row;
   gap: 40px;
   width: fit-content;
@@ -46,20 +45,19 @@
       background-color: $highlight-green;
     }
   }
-}
-
-.logout-btn {
-  background-color: transparent;
-  border: none;
-  color: #ffff;
-  font-size: 18px;
-  cursor: pointer;
+  .logout-btn {
+    background-color: transparent;
+    border: none;
+    color: #ffff;
+    font-size: 18px;
+    cursor: pointer;
+  }
 }
 
 @media (max-width: 720px) {
   .header-content {
-    display: flex;
-    justify-content: space-between;
-    width: 600px;
+    max-width: 550px;
+    width: 100%;
+    padding: 0 10px;
   }
 }
