--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,9 +1,11 @@
-@import '../../../styles.scss';
+@import '../../shared/styles/variables.scss';
 .main {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  padding: 80px 20px;
+  box-sizing: border-box;
+  justify-content: center;
 }
 
 .title {
@@ -15,21 +17,21 @@
 .meals {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  overflow-x: scroll;
   gap: 40px;
+  max-width: 1240px;
+  width: 100%;
+  overflow-x: auto;
+  box-sizing: border-box;
 }
 
 @media (max-width: 720px) {
   .meals {
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 30px;
+    max-width: 600px;
     width: 100%;
-    overflow-x: scroll;
-    gap: 40px;
+    box-sizing: border-box;
   }
 }
